[package]
name = "CI-debtlint"
version = "0.1.0"
edition = "2024"
authors = ["POC"]
description = "A technical debt detection tool"
repository = "https://github.com/PoCInnovation/Debtlint.git"
readme = "README.md"
license = "Apache-2.0"
keywords = ["CLI", "code-analysis", "technical-debt", "duplication", "linter"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
